# sir-firewall

./: .gitattributes  .gitignore  LICENSE  LICENSE-MSFT.txt  LICENSE.txt  PATENTS.md  PATENTS.txt  PATETS.txt  README.md  RETENTION.md  SECURITY.md  jailbreak_prompts.csv  pyproject.toml  red_team_suite.py  requirements.txt
docs/: assurance-kit.md  benchmark-cycle.v1.md  comparison-discipline.v2.md  compliance-evidence-map.md  d11-structured-evidence-surfacing-review.md  d12-s1.1-structured-mode-design.md  d5-benchmark-first-cycle-review.md  engineer-guide.md  evaluator-technical-explainer.md  evidence-perimeter.v1.md  evidence-perimeter.v2.md  evidence-perimeter.v3.md  external-technical-review-prep.md  index.html  key-governance-readiness.md  latest-audit.html  latest-audit.json  latest-run.html  latest-run.json  manaaki_integration.md  minimal-pilot-runbook.md  model-selection.md  monitor-summary.json  release-notes-2.0.md  release-notes-2.1.md  standards_alignment.md  terminology.md  trial-guide.md
policy/: isc_policy.json  isc_policy.signed.json  sdl_public_key.pem
proofs/: README.md  audit-certificate-2025-12-02T030130Z.json  audit-certificate-2025-12-03T104142Z.json  audit-certificate-2025-12-03T104347Z.json  audit-certificate-2025-12-03T104548Z.json  audit-certificate-2025-12-03T104811Z.json  audit-certificate-2025-12-03T105047Z.json  audit-certificate-2025-12-03T105320Z.json  audit-certificate-2025-12-03T105545Z.json  audit-certificate-2025-12-03T140937Z.json  audit-certificate-2025-12-03T141327Z.json  audit-certificate-2025-12-03T141703Z.json  (+56 more)
spec/: sdl.pub  (+5 more)
(+1255 files in other folders)
