[project]
name = "sir-firewall"
version = "0.1.0"

dependencies = [
  "cryptography",
  "litellm",
  "openai",
  "pydantic",
  "ecdsa",
  "requests",
  "pytest",
  "pandas"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"sir_firewall" = "src/sir_firewall"
